--- a/style.css
+++ b/style.css
@@ -134,19 +134,18 @@ h1 pre{
     color: #fff;
   }
   .phone1 img{
-    width: 1000px;
+    width: 0px;
+    height: 0px;
     position: absolute;
-    visibility: hidden;
+    /* visibility: hidden; */
     transition: all .5s ease;
     bottom: 0;
     right: -100px;
-    /* overflow-clip-margin: content-box;
-    overflow-x:  ;
-    overflow-y: ; */
   }
   .phone1:hover img{
     width: 250px;
-    visibility: visible;
+    height: 250px;
+    /* visibility: visible; */
     bottom: 0;
     right: 20px;
   }
@@ -204,16 +203,18 @@ h1 pre{
     color: #fff;
   }
   .phone2 img{
-    width: 1000px;
+    width: 0px;
+    height:0px ;
     position: absolute;
-    visibility: hidden;
+    /* visibility: hidden; */
     transition: all .5s ease;
     bottom: 0;
     right: -100px;
   }
   .phone2:hover img{
     width: 250px;
-    visibility: visible;
+    height: 250px;
+    /* visibility: visible; */
     bottom: 0;
     right: 20px;
   }
@@ -273,16 +274,18 @@ h1 pre{
     color: #fff;
   }
   .phone3 img{
-    width: 1000px;
+    width: 0px;
+    height: 0px;
     position: absolute;
-    visibility: hidden;
+    /* visibility: hidden; */
     transition: all .5s ease;
     bottom: 0;
     right: -100px
   }
   .phone3:hover img{
     width: 250px;
-    visibility: visible;
+    height: 250px;
+    /* visibility: visible; */
     bottom: 0;
     right: 20px;
   }
@@ -335,20 +338,22 @@ h1 pre{
     min-height: 80px;
     color: #3d4f60;
   }
-  .phone4:hover .text{
+  .phone4:hover .text3{
     color: #fff;
   }
   .phone4 img{
-    width: 1000px;
+    width: 0px;
+    height: 0px;
     position: absolute;
-    visibility: hidden;
+    /* visibility: hidden; */
     transition: all .5s ease;
     bottom: 0;
     right: -100px;
   }
   .phone4:hover img{
     width: 250px;
-    visibility: visible;
+    height: 250px;
+    /* visibility: visible; */
     bottom: 0;
     right: 20px;
   }
@@ -408,16 +413,18 @@ h1 pre{
     color:#fff;
   }
   .phone5 img{
-    width: 1000px;
+    width: 0px;
+    height: 0px;
     position: absolute;
-    visibility: hidden;
+    /* visibility: hidden; */
     transition: all .5s ease;
     bottom: 0;
     right: -100px;
   }
   .phone5:hover img{
     width: 250px;
-    visibility: visible;
+    height: 250px;
+    /* visibility: visible; */
     bottom: 0;
     right: 20px;
   }
