--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ height: fit-content;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  z-index: 1;
 }
 header nav ul{
   display: flex;
@@ -46,6 +47,7 @@ color: rgb(17,32,46);
 font-size: 17px;
 font-weight: bold;
 margin-left: 180px;
+border: 1px solid;
 }
 .create{
 padding: 17px 25px;
@@ -54,7 +56,7 @@ background-color: rgb(17,32,46);
 color: aliceblue;
 font-size: 17px;
 font-weight: bold;
-margin-right: 60px;
+margin-right: 80px;
 }
 header nav .dropdown{
   display: none;
@@ -88,53 +90,52 @@ border-radius: 16px;
    margin-top: 150px; 
    border-radius: 36px; 
 }
-.headers{
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-}
+
 .header{
-  position: absolute;
+  /* position: absolute; */
 opacity: 1;
 width: 210px;
-margin-left: 680px;
-margin-top:290px;
+margin-left: -600px;
+margin-bottom:340px;
 border-radius: 15px;
 }
 .header2{
-  position: absolute;
+  /* position: absolute; */
 opacity: 1;
 width: 210px;
-margin-left: 1100px;
-margin-top: 240px;
+margin-left: 230px;
+/* margin-top: 240px; */
+margin-bottom:365px;
 border-radius: 16px;
 }
 .header3{
-  position: absolute;
+  /* position: absolute; */
 opacity: 1;
 width: 210px;
-margin-left: 650px;
-margin-top: 480px;
+margin-left: -670px;
+margin-bottom: 130px;
+/* margin-top: 480px; */
 border-radius: 15px;
 }
 .header4{
-  position: absolute;
+  /* position: absolute; */
 opacity: 1;
 width: 210px;
-margin-left: 1130px;
-margin-top: 500px;
+margin-left: 600px;
+margin-bottom:180px;
+margin-top: -400px;
 border-radius: 15px;
 }
 .header5{
-  position: absolute;
+  /* position: absolute; */
 opacity: 1;
 width: 210px;
-margin-left: 900px;
-margin-top: 630px;
+margin-left: 400px;
+margin-top: -290px;
+margin-bottom: 20px;
 border-radius: 15px;
-margin-bottom: 200px;}
+
+}
 .sec{
 margin-left: 200px; 
 margin-top: -25px; 
@@ -257,13 +258,13 @@ margin-top: 45px;
   position: absolute;
   /* visibility: hidden; */
   transition: all .5s ease;
-  bottom: 0;
-  right: -100px;
+ right: -100px;
 }
 .phone1:hover img{
+  
   width: 250px;
   height: 250px;
-  /* visibility: visible; */
+  /* visibility: visible */
   bottom: 0;
   right: 20px;
 }
@@ -599,7 +600,7 @@ overflow: hidden;
 }
 .myinv{
   margin-left: 650px;
-   float: right; 
+   /* float: right;  */
   margin-top: -230px;
 }
 .returns{
